--- a/index.html
+++ b/index.html
@@ -185,9 +185,15 @@
                 </div>
                 <div class="card-body text-center">
                     <h5 class="card-title topic">Best Gifts</h5>
+                    <span class="badge badgeMine text-dark">Angular</span>
+                    <span class="badge badgeMine text-dark">Sass</span>
+                    <span class="badge badgeMine text-dark">RxJS</span>
                     <p class="card-text">2022 <a href="https://github.com/owik100/best-gifts"
                         target="blank">Github
                         <i class="fab fa-github"></i>
+                        <a href="https://owik100.github.io/best-gifts/"
+                                target="blank">&nbsp;&nbsp;Live
+                                <i class="fab fa-github"></i>
                     </a></p>
                 </div>
             </div>
@@ -202,6 +208,8 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Dhos Adventures</h5>
+                        <span class="badge badgeMine text-dark">C#</span>
+                        <span class="badge badgeMine text-dark">Unity</span>
                         <p class="card-text">2016 - 2021 <a href="https://owik.itch.io/dhos-adventures"
                                 target="blank">Itch.io <i class="fab fa-itch-io"></i>
                             </a> </p>
@@ -220,6 +228,10 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Cook Book Client Desktop</h5>
+                        <span class="badge badgeMine text-dark">C#</span>
+                        <span class="badge badgeMine text-dark">WPF</span>
+                        <span class="badge badgeMine text-dark">Caliburn.Micro</span>
+                        <span class="badge badgeMine text-dark">AutoMapper</span>
                         <p class="card-text">2020 <a href="https://github.com/owik100/Cook-Book-Client-Desktop"
                                 target="blank">Github
                                 <i class="fab fa-github"></i>
@@ -238,6 +250,8 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Cook Book Client Web</h5>
+                        <span class="badge badgeMine text-dark">React</span>
+                        <span class="badge badgeMine text-dark">CSS</span>
                         <p class="card-text">2020 <a href="https://github.com/owik100/cook_book_client_web"
                                 target="blank">Github
                                 <i class="fab fa-github"></i>
@@ -260,6 +274,10 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Cook Book Client Mobile</h5>
+                        <span class="badge badgeMine text-dark">C#</span>
+                        <span class="badge badgeMine text-dark">Xamarin Forms</span>
+                        <span class="badge badgeMine text-dark">Autofac</span>
+                        <span class="badge badgeMine text-dark">AutoMapper</span>
                         <p class="card-text">2020 <a href="https://github.com/owik100/Cook-Book-Mobile"
                                 target="blank">Github
                                 <i class="fab fa-github"></i>
@@ -277,6 +295,9 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Mood food</h5>
+                        <span class="badge badgeMine text-dark">C#</span>
+                        <span class="badge badgeMine text-dark">ASP.NET Core 2.2</span>
+                        <span class="badge badgeMine text-dark">Entity Framework Core</span>
                         <p class="card-text">2019 <a href="https://github.com/owik100/Mood-FoodV2" target="blank">Github
                                 <i class="fab fa-github"></i>
                             </a></p>
@@ -294,6 +315,9 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Minesweeper</h5>
+                        <span class="badge badgeMine text-dark">C#</span>
+                        <span class="badge badgeMine text-dark">WPF</span>
+                        <span class="badge badgeMine text-dark">Dapper</span>
                         <p class="card-text">2018 <a href="https://github.com/owik100/Minesweeper" target="blank">Github
                                 <i class="fab fa-github"></i>
                             </a></p>
@@ -310,6 +334,8 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Chat</h5>
+                        <span class="badge badgeMine text-dark">C#</span>
+                        <span class="badge badgeMine text-dark">WinForms</span>
                         <p class="card-text">2018 <a href="https://github.com/owik100/Chat" target="blank">Github <i
                                     class="fab fa-github"></i>
                             </a></p>
@@ -326,6 +352,8 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Pasjans golf</h5>
+                        <span class="badge badgeMine text-dark">C#</span>
+                        <span class="badge badgeMine text-dark">WinForms</span>
                         <p class="card-text">2017 <a href="https://github.com/owik100/Golf-Solitaire"
                                 target="blank">Github <i class="fab fa-github"></i>
                             </a></p>
@@ -342,6 +370,7 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title topic">Frogger</h5>
+                        <span class="badge badgeMine text-dark">C++</span>
                         <p class="card-text">2017 <a href="https://github.com/owik100/Frogger" target="blank">Github <i
                                     class="fab fa-github"></i>
                             </a></p>
@@ -365,7 +394,12 @@
                                     href="https://github.com/owik100/Cook-Book-API" target="blank">Cook Book API</a>.
                                 Pozwala na tworzenie prywatnych przepisów kulinarnych, publikowania ich, oraz
                                 przeglądowanie przepisów innych użytkowników.</p>
-                            <p class="text-center">Użyte języki i technologie: C#, WPF, Caliburn Micro, Auto Mapper</p>
+                                <div class="techBadges">
+                                    <span class="badge badgeMine text-dark">C#</span>
+                                    <span class="badge badgeMine text-dark">WPF</span>
+                                    <span class="badge badgeMine text-dark">Caliburn.Micro</span>
+                                    <span class="badge badgeMine text-dark">AutoMapper</span>
+                                </div>
                             <p class="text-center"><a href="https://github.com/owik100/Cook-Book-Client-Desktop"
                                     target="blank">Github <i class="fab fa-github"></i> </a></p>
                             <img class=" bImg mx-auto d-block img-fluid" id="main7"
@@ -412,7 +446,10 @@
                                     href="https://github.com/owik100/Cook-Book-API" target="blank">Cook Book API</a>.
                                 Pozwala na tworzenie prywatnych przepisów kulinarnych, publikowania ich, oraz
                                 przeglądowanie przepisów innych użytkowników.</p>
-                            <p class="text-center">Użyte języki i technologie: React, JSX, CSS</p>
+                                <div class="techBadges">
+                                    <span class="badge badgeMine text-dark">React</span>
+                                    <span class="badge badgeMine text-dark">CSS</span>
+                                </div>
                             <p class="text-center"><a href="https://github.com/owik100/cook_book_client_web"
                                     target="blank">Github <i class="fab fa-github"></i>
                                     <a href="https://owik100.github.io/cook_book_client_web"
@@ -464,8 +501,12 @@
                                     href="https://github.com/owik100/Cook-Book-API" target="blank">Cook Book API</a>.
                                 Pozwala na tworzenie prywatnych przepisów kulinarnych, publikowania ich, oraz
                                 przeglądowanie przepisów innych użytkowników.</p>
-                            <p class="text-center">Użyte języki i technologie: C#, Xamarin Forms, Autofac, Auto Mapper
-                            </p>
+                            <div class="techBadges">
+                                <span class="badge badgeMine text-dark">C#</span>
+                                <span class="badge badgeMine text-dark">Xamarin Forms</span>
+                                <span class="badge badgeMine text-dark">Autofac</span>
+                                <span class="badge badgeMine text-dark">AutoMapper</span>
+                            </div>
                             <p class="text-center"><a href="https://github.com/owik100/Cook-Book-Mobile"
                                     target="blank">Github <i class="fab fa-github"></i> </a></p>
                             <img class=" bImg mx-auto d-block img-fluid" id="main9"
@@ -511,8 +552,11 @@
                             <p class="text-center">Aplikacja służąca do obsługi restauracji. Pozwala użytkownikom na
                                 składanie zamówień. Administrator ma możliwość zarządzania produktami, użytkownikami i
                                 zamówieniami. </p>
-                            <p class="text-center">Użyte języki i technologie: C#, ASP.NET Core, Entity Framework Core
-                            </p>
+                                <div class="techBadges">
+                                    <span class="badge badgeMine text-dark">C#</span>
+                                    <span class="badge badgeMine text-dark">ASP.NET Core 2.2</span>
+                                    <span class="badge badgeMine text-dark">Entity Framework Core</span>
+                                </div>
                             <p class="text-center"><a href="https://github.com/owik100/Mood-FoodV2"
                                     target="blank">Github <i class="fab fa-github"></i> </a></p>
                             <img class=" bImg mx-auto d-block img-fluid" id="main1"
@@ -558,7 +602,11 @@
                         <div class="modal-body">
                             <p class="text-center">Gra saper, pozwalająca ustawić ilość min oraz zapisująca wyniki
                                 graczy.</p>
-                            <p class="text-center">Użyte języki i technologie: C#, WPF, Dapper </p>
+                                <div class="techBadges">
+                                    <span class="badge badgeMine text-dark">C#</span>
+                                    <span class="badge badgeMine text-dark">WPF</span>
+                                    <span class="badge badgeMine text-dark">Dapper</span>
+                                </div>
                             <p class="text-center"><a href="https://github.com/owik100/Minesweeper"
                                     target="blank">Github <i class="fab fa-github"></i> </a></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main2"
@@ -599,7 +647,10 @@
                         <div class="modal-body">
                             <p class="text-center">Aplikacja chatu, pozwalająca na wysyłanie wiadomości. Podstawowa
                                 konfiguracja odbywa się za pomocą pliku konfiguracyjnego w formacie JSON.</p>
-                            <p class="text-center">Użyte języki i technologie: C#, Win forms</p>
+                                <div class="techBadges">
+                                    <span class="badge badgeMine text-dark">C#</span>
+                                    <span class="badge badgeMine text-dark">WinForms</span>
+                                </div>
                             <p class="text-center"><a href="https://github.com/owik100/Chat" target="blank">Github <i
                                         class="fab fa-github"></i> </a></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main3"
@@ -635,7 +686,10 @@
                         </div>
                         <div class="modal-body">
                             <p class="text-center">Prosta gra w pasjans.</p>
-                            <p class="text-center">Użyte języki i technologie: C#, Win forms</p>
+                            <div class="techBadges">
+                                <span class="badge badgeMine text-dark">C#</span>
+                                <span class="badge badgeMine text-dark">WinForms</span>
+                            </div>
                             <p class="text-center"><a href="https://github.com/owik100/Golf-Solitaire"
                                     target="blank">Github <i class="fab fa-github"></i> </a></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main4" src="images/Projects/Golf/Game.png">
@@ -668,7 +722,9 @@
                         </div>
                         <div class="modal-body">
                             <p class="text-center">Gra frogger z trzema poziomami.</p>
-                            <p class="text-center">Użyte języki i technologie: C++</p>
+                            <div class="techBadges">
+                                <span class="badge badgeMine text-dark">C++</span>
+                            </div>
                             <p class="text-center"><a href="https://github.com/owik100/Frogger" target="blank">Github <i
                                         class="fab fa-github"></i> </a></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main5"
@@ -709,7 +765,10 @@
                         <div class="modal-body">
                             <p class="text-center">Dwuwymiarowa gra platformowa stworzona w środowisku unity. Składa się
                                 z ponad 20 poziomów z różnorodnymi przeciwnikami i zagadkami.</p>
-                            <p class="text-center">Użyte języki i technologie: C#, Unity</p>
+                                <div class="techBadges">
+                                    <span class="badge badgeMine text-dark">C#</span>
+                                    <span class="badge badgeMine text-dark">Unity</span>
+                                </div>
                             <p class="text-center"><a href="https://owik.itch.io/dhos-adventures" target="blank">Itch.io
                                     <i class="fab fa-itch-io"></i> </a></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main6" src="images/Projects/Dhos/1.1.png">
@@ -756,9 +815,15 @@
                             Służy do przeszukiwania inspiracji i pomysłów na prezenty na różne okazje. 
                             Pozwala na głosowanie na najlepsze pomysły na prezenty, łatwe i szybkie udostępnianie ich oraz
                             dzielenie się swoimi pomysłami z innymi.</p>
-                            <p class="text-center">Użyte języki i technologie: Angular, Sass, RxJS</p>
+                            <div class="techBadges">
+                                <span class="badge badgeMine text-dark">Angular</span>
+                                <span class="badge badgeMine text-dark">Sass</span>
+                                <span class="badge badgeMine text-dark">RxJS</span>
+                            </div>
                             <p class="text-center"><a href="https://github.com/owik100/best-gifts" target="blank">Github <i
-                                class="fab fa-github"></i> </a></p>
+                                class="fab fa-github"></i> </a><a href="https://owik100.github.io/best-gifts/"
+                                target="blank">&nbsp;&nbsp;Live
+                                <i class="fab fa-github"></i></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main10" src="images/Projects/Best Gifts/gift add.png">
                         </div>
                         <div class="modal-footer">
