Better skills images, projects describtions

--- a/index.html
+++ b/index.html
@@ -102,68 +102,17 @@
         <div class="container ">
             <p class="text-center mb-5">Języki i narzędzia z którymi najczęścej mam do czynienia.</p>
 
-            <div class="row mb-4">
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/csharp.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/VB.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/net.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/net core.png">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mb-4">
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/html.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/css.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo" src="images/js.png">
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo mx-auto" src="images/git3.png">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo mx-auto" src="images/plastic.png">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-
-                <div class="col ">
-                    <div class="d-flex justify-content-center mb-3">
-                        <img class="img-logo " src="images/unity3.png">
-                    </div>
-                </div>
-            </div>
+        <div class="containerFlex">
+            <img class="img-logo" src="images/csharp.png" data-toggle="tooltip" title="C#">
+            <img class="img-logo" src="images/VB.png" data-toggle="tooltip" title="Visual Basic">
+            <img class="img-logo" src="images/net.png" data-toggle="tooltip" title=".NET Framework">
+            <img class="img-logo" src="images/net core.png" data-toggle="tooltip" title=".NET Core">
+            <img class="img-logo" src="images/html.png" data-toggle="tooltip" title="HTML">
+            <img class="img-logo" src="images/css.png" data-toggle="tooltip" title="CSS">
+            <img class="img-logo" src="images/js.png" data-toggle="tooltip" title="JavaScript">
+            <img class="img-logo" src="images/git3.png" data-toggle="tooltip" title="Git">
+            <img class="img-logo " src="images/plastic.png" data-toggle="tooltip" title="Plastic SCM">
+            <img class="img-logo " src="images/unity3.png" data-toggle="tooltip" title="Unity">
         </div>
     </section>
 
@@ -171,7 +120,7 @@
     <section id="projects">
         <h1 class="text-center topic">Projekty</h1>
         <p class="text-center">Kilka zrealizowanych przeze mnie projektów.</p>
-        <p class="text-center mb-5">Naciśnij na jakiś aby dowiedzieć się więcej!</p>
+        <p class="text-center mb-5">Naciśnij na jakiś aby dowiedzieć się więcej! 🔍</p>
         <div class="container">
             <div class="card-deck">
 
@@ -393,7 +342,7 @@
                             <p class="text-center">Desktopowa aplikacja do obsługi <a
                                     href="https://github.com/owik100/Cook-Book-API" target="blank">Cook Book API</a>.
                                 Pozwala na tworzenie prywatnych przepisów kulinarnych, publikowania ich, oraz
-                                przeglądowanie przepisów innych użytkowników.</p>
+                                przeglądowanie przepisów innych użytkowników. 📗</p>
                                 <div class="techBadges">
                                     <span class="badge badgeMine text-dark">C#</span>
                                     <span class="badge badgeMine text-dark">WPF</span>
@@ -445,7 +394,7 @@
                             <p class="text-center">Webowa aplikacja do obsługi <a
                                     href="https://github.com/owik100/Cook-Book-API" target="blank">Cook Book API</a>.
                                 Pozwala na tworzenie prywatnych przepisów kulinarnych, publikowania ich, oraz
-                                przeglądowanie przepisów innych użytkowników.</p>
+                                przeglądowanie przepisów innych użytkowników. 📘</p>
                                 <div class="techBadges">
                                     <span class="badge badgeMine text-dark">React</span>
                                     <span class="badge badgeMine text-dark">CSS</span>
@@ -500,7 +449,7 @@
                             <p class="text-center">Mobilna aplikacja do obsługi <a
                                     href="https://github.com/owik100/Cook-Book-API" target="blank">Cook Book API</a>.
                                 Pozwala na tworzenie prywatnych przepisów kulinarnych, publikowania ich, oraz
-                                przeglądowanie przepisów innych użytkowników.</p>
+                                przeglądowanie przepisów innych użytkowników. 📙</p>
                             <div class="techBadges">
                                 <span class="badge badgeMine text-dark">C#</span>
                                 <span class="badge badgeMine text-dark">Xamarin Forms</span>
@@ -551,7 +500,7 @@
                         <div class="modal-body">
                             <p class="text-center">Aplikacja służąca do obsługi restauracji. Pozwala użytkownikom na
                                 składanie zamówień. Administrator ma możliwość zarządzania produktami, użytkownikami i
-                                zamówieniami. </p>
+                                zamówieniami. 🍽️</p>
                                 <div class="techBadges">
                                     <span class="badge badgeMine text-dark">C#</span>
                                     <span class="badge badgeMine text-dark">ASP.NET Core 2.2</span>
@@ -600,8 +549,8 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p class="text-center">Gra saper, pozwalająca ustawić ilość min oraz zapisująca wyniki
-                                graczy.</p>
+                            <p class="text-center">Klasyczna gra saper, pozwalająca wybrać ilość min oraz zapisująca wyniki
+                                graczy do bazy danych.💣</p>
                                 <div class="techBadges">
                                     <span class="badge badgeMine text-dark">C#</span>
                                     <span class="badge badgeMine text-dark">WPF</span>
@@ -645,8 +594,8 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p class="text-center">Aplikacja chatu, pozwalająca na wysyłanie wiadomości. Podstawowa
-                                konfiguracja odbywa się za pomocą pliku konfiguracyjnego w formacie JSON.</p>
+                            <p class="text-center">Prosta aplikacja chatu w konfiguracji klient - serwer, pozwalająca na wysyłanie wiadomości. Podstawowa
+                                konfiguracja odbywa się za pomocą pliku konfiguracyjnego w formacie JSON. 💬</p>
                                 <div class="techBadges">
                                     <span class="badge badgeMine text-dark">C#</span>
                                     <span class="badge badgeMine text-dark">WinForms</span>
@@ -685,7 +634,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p class="text-center">Prosta gra w pasjans.</p>
+                            <p class="text-center">Gra w pasjans w wersji golf. Należy wyczyścić stół wybierając kartę o wartości o jeden większą lub mniejszą od aktualnej na stosie. Kolor nie ma znaczenia. 🃏</p>
                             <div class="techBadges">
                                 <span class="badge badgeMine text-dark">C#</span>
                                 <span class="badge badgeMine text-dark">WinForms</span>
@@ -721,7 +670,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p class="text-center">Gra frogger z trzema poziomami.</p>
+                            <p class="text-center">Prosta gra Frogger z trzema poziomami uruchamiana w konsoli. Należy unikać samochodów oraz węży i wskakiwać na łódki. 🐸</p>
                             <div class="techBadges">
                                 <span class="badge badgeMine text-dark">C++</span>
                             </div>
@@ -764,7 +713,7 @@
                         </div>
                         <div class="modal-body">
                             <p class="text-center">Dwuwymiarowa gra platformowa stworzona w środowisku unity. Składa się
-                                z ponad 20 poziomów z różnorodnymi przeciwnikami i zagadkami.</p>
+                                z ponad 20 poziomów z różnorodnymi przeciwnikami i zagadkami. 🍋</p>
                                 <div class="techBadges">
                                     <span class="badge badgeMine text-dark">C#</span>
                                     <span class="badge badgeMine text-dark">Unity</span>
@@ -814,7 +763,7 @@
                             </a>.
                             Służy do przeszukiwania inspiracji i pomysłów na prezenty na różne okazje. 
                             Pozwala na głosowanie na najlepsze pomysły na prezenty, łatwe i szybkie udostępnianie ich oraz
-                            dzielenie się swoimi pomysłami z innymi.</p>
+                            dzielenie się swoimi pomysłami z innymi. 🎁</p>
                             <div class="techBadges">
                                 <span class="badge badgeMine text-dark">Angular</span>
                                 <span class="badge badgeMine text-dark">Sass</span>
@@ -859,7 +808,7 @@
         </div>
         <div class="text-center mb-2 socialColor"><a href="mailto:marcin.owczarz95@gmail.com" target="_blank"><i
                     class="fas fa-envelope icon mr-2 mailFooter"></i>marcin.owczarz95@gmail.com </a> </div>
-        <div class="text-center"> Marcin Owczarz 2019 - 2021
+        <div class="text-center"> Marcin Owczarz 2019 - 2022
 
         </div>
     </footer>
