--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                             <p class="text-center"><a href="https://github.com/owik100/best-gifts" target="blank">Github <i
                                 class="fab fa-github"></i> </a><a href="https://owik100.github.io/best-gifts/"
                                 target="blank">&nbsp;&nbsp;Live
-                                <i class="fab fa-github"></i></p>
+                                <i class="fab fa-github"></i></a></p>
                             <img class="bImg mx-auto d-block img-fluid" id="main10" src="images/Projects/Best Gifts/gift add.png">
                         </div>
                         <div class="modal-footer">
