Added devexpress, better skills icons

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!--Skills section-->
     <section id="skills">
         <h1 class="text-center topic">Umięjętności</h1>
-        <div class="container ">
+        <div class="container containerSkills">
             <p class="text-center mb-5">Języki i narzędzia z którymi najczęścej mam do czynienia.</p>
 
         <div class="containerFlex">
@@ -110,9 +110,10 @@
             <img class="img-logo" src="images/html.png" data-toggle="tooltip" title="HTML">
             <img class="img-logo" src="images/css.png" data-toggle="tooltip" title="CSS">
             <img class="img-logo" src="images/js.png" data-toggle="tooltip" title="JavaScript">
-            <img class="img-logo" src="images/git3.png" data-toggle="tooltip" title="Git">
+            <img class="img-logo " src="images/dev express logo 4.png" data-toggle="tooltip" title="DevExpress">
+            <img class="img-logo " src="images/unity-69-logo-png-transparent.png" data-toggle="tooltip" title="Unity">
+            <img class="img-logo" src="images/git 4.png" data-toggle="tooltip" title="Git">
             <img class="img-logo " src="images/plastic.png" data-toggle="tooltip" title="Plastic SCM">
-            <img class="img-logo " src="images/unity3.png" data-toggle="tooltip" title="Unity">
         </div>
     </section>
 
