Added Code compiler service manager

--- a/index.html
+++ b/index.html
@@ -125,6 +125,25 @@
         <div class="container">
             <div class="card-deck">
 
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project11"
+                data-target="#Project11Modal">
+                <div class="projectGif">
+                    <img class="card-img-top" src="images/Projects/Code Compiler Service Manager/Code Compiler Service Manager.gif" alt="Card image cap">
+                    <div class="magnifier">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title topic">Code Compiler Service Manager</h5>
+                    <span class="badge badgeMine text-dark">C#</span>
+                    <span class="badge badgeMine text-dark">WinForms</span>
+                    <span class="badge badgeMine text-dark">Windows Service</span>
+                    <p class="card-text">2022<a href="https://github.com/owik100/CodeCompilerServiceManager"
+                        target="blank">Github <i class="fab fa-github"></i>
+                    </a> </p>
+                </div>
+            </div>
+                
                 <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project10"
                 data-target="#Project10Modal">
                 <div class="projectGif">
@@ -774,11 +793,14 @@
                                 class="fab fa-github"></i> </a><a href="https://owik100.github.io/best-gifts/"
                                 target="blank">&nbsp;&nbsp;Live
                                 <i class="fab fa-github"></i></a></p>
-                            <img class="bImg mx-auto d-block img-fluid" id="main10" src="images/Projects/Best Gifts/gift add.png">
+                            <img class="bImg mx-auto d-block img-fluid" id="main10" src="images/Projects/Best Gifts/Best gifts.gif">
                         </div>
                         <div class="modal-footer">
                             <div class="container">
                                 <div class="row">
+                                    <div class="col">
+                                        <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/Best gifts.gif">
+                                    </div>
                                     <div class="col">
                                         <img class="img-fluid sImg" smallID=small10 src="images/Projects/Best Gifts/gift add.png">
                                     </div>
@@ -800,6 +822,56 @@
                     </div>
                 </div>
             </div>
+
+            <div class="modal fade" id="Project11Modal" tabindex="-1" role="dialog" aria-labelledby="Project11ModalTitle"
+            aria-hidden="true">
+            <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title w-100 text-center topic">Code Compiler Service Manager</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="text-center">Desktopowa aplikacja do obsługi <a
+                            href="https://github.com/owik100/CoderCompilerWorkerService" target="blank">Code Compiler Service
+                        </a>.
+                        Usługa wykrywa dodane pliki w określonym folderze a następnie kompiluje je jako bibliotekę (.dll) lub aplikację konsolową (.exe).
+                        Sam Manager pozwala na pełne zarządzanie usługą, monitoring i jej konfigurację.📦</p>
+                        <div class="techBadges">
+                            <span class="badge badgeMine text-dark">C#</span>
+                            <span class="badge badgeMine text-dark">WinForms</span>
+                            <span class="badge badgeMine text-dark">Windows Service</span>
+                        </div>
+                        <p class="text-center"><a href="https://github.com/owik100/CodeCompilerServiceManager" target="blank">Github <i
+                            class="fab fa-github"></i></a></p>
+                        <img class="bImg mx-auto d-block img-fluid" id="main11" src="images/Projects/Code Compiler Service Manager/Code Compiler Service Manager.gif">
+                    </div>
+                    <div class="modal-footer">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <img class="img-fluid sImg" smallID=small11 src="images/Projects/Code Compiler Service Manager/Code Compiler Service Manager.gif">
+                                </div>
+                                <div class="col">
+                                    <img class="img-fluid sImg" smallID=small11 src="images/Projects/Code Compiler Service Manager/HomeControl.png">
+                                </div>
+                                <div class="col">
+                                    <img class="img-fluid sImg" smallID=small11 src="images/Projects/Code Compiler Service Manager/ManagerSettings.png">
+                                </div>
+                                <div class="col">
+                                    <img class="img-fluid sImg" smallID=small11 src="images/Projects/Code Compiler Service Manager/ServiceSettings.png">
+                                </div>
+                                <div class="col">
+                                    <img class="img-fluid sImg" smallID=small11 src="images/Projects/Code Compiler Service Manager/LibrarySettings.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!--Contact, footer-->
